--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,35 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+        //Navigation safe Args
+        def nav_version = "2.1.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
+
+    ext {
+        roomVersion = '2.2.3'
+        archLifecycleVersion = '2.2.0-rc03'
+        androidxArchVersion = '2.1.0'
+        coreTestingVersion = "2.1.0"
+        coroutines = '1.3.2'
+        materialVersion = "1.0.0"
+        nav_version = "2.1.0"
+    }
+
 }
 
 allprojects {
     repositories {
+        /*
         maven {
             url 'https://maven.google.com'
         }
+        */
         jcenter()
         google()
     }
