Added functions to the main fragment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".UI.MainActivity">
+        <activity android:name="com.example.cauliflower.ready2walk.UI.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,4 +20,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
