--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.example.cauliflower.ready2walk.UI.MainActivity">
+            android:label="Hello Bobby"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
